# HoloCraft---HoloQuiz

./: .gitignore  AGENTS.md  README.md  config.example.json  holoquiz_bot.py  holoquiz_gui.py  pyproject.toml  quiz_memory - Copy.json  run_bot.bat
docs/superpowers/plans/: 2026-06-14-holoquiz-bot-implementation.md  2026-07-04-holoquiz-gui-control-panel.md  2026-07-14-coordinate-lock-auto-hit-targeting.md  2026-07-14-coordinate-lock-camera-neutral-fallback.md  2026-07-14-coordinate-lock-concurrent-auto-hit.md  2026-07-14-coordinate-lock-look-at-target.md  2026-07-16-answer-sound-toggle.md  2026-07-17-auto-heal-percent-return-item.md  2026-07-17-holoquiz-module-toggle-persistence.md  2026-07-17-player-auto-heal.md  2026-07-17-player-horizontal-centering.md  2026-07-17-player-module.md  2026-07-17-player-tab-layout.md
docs/superpowers/specs/: 2026-06-14-holoquiz-bot-design.md  (+12 more)
holoquiz/: auto_heal.py  chat_sender.py  chat_trigger.py  codex_client.py  config.py  coordinate_lock.py  gui.py  keyboard_coordinator.py  log_tailer.py  memory.py  minecraft_text_ocr.py  mouse_hotkey.py  parser.py  player.py  player_view.py  runner.py  runtime.py  screen_phrase_watcher.py  sound_player.py
tests/: test_auto_heal.py  test_chat_sender.py  test_codex_client.py  test_config.py  test_coordinate_lock.py  test_gui.py  test_keyboard_coordinator.py  test_log_tailer.py  test_memory.py  test_minecraft_text_ocr.py  test_mouse_hotkey.py  test_parser.py  test_player.py  test_player_view.py  test_runner.py  test_runtime.py  test_screen_phrase_watcher.py  test_sound_player.py
